--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('images/Background1.png');
+    background-image: url('images/Background1.jpg');
     min-height: 100%;
 }
 
 /* Second image (DL) */
 .bgimg-2 {
-    background-image: url("images/Background1.png");
+    background-image: url("images/Background1.jpg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("images/Background1.png");
+    background-image: url("images/Background1.jpg");
     min-height: 400px;
 }
 
