--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@ body, html {
   <p class="w3-center"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>Email (for Sylvain Lobry only): firstname.lastname at u-paris.fr<br></p>
   <p class="w3-center">This work is funded by <a href="https://www.anr.fr">ANR</a></p>
   <div class="w3-center">
-    <img style="width:30%; margin:10px" src="images/ANR-logo-2021-complet.jpg" alt="logo anr">
-    <img style="width:30%; margin:10px" src="images/logo-UPC.jpeg" alt="logo Université Paris Cité">
-    <img style="width:30%; margin:10px" src="images/logo-inria.jpg" alt="logo INRIA">
+    <img style="width:20%; margin:10px" src="images/ANR-logo-2021-complet.jpg" alt="logo anr">
+    <img style="width:20%; margin:10px" src="images/logo-UPC.jpeg" alt="logo Université Paris Cité">
+    <img style="width:20%; margin:10px" src="images/logo-inrae.jpg" alt="logo INRAE">
+    <img style="width:20%; margin:10px" src="images/logo-inria.jpg" alt="logo INRIA">
   </div>
 </div>
 
