--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body, html {
   <div class="w3-center">
     <img style="width:20%; margin:10px" src="images/ANR-logo-2021-complet.jpg" alt="logo anr">
     <img style="width:20%; margin:10px" src="images/logo-UPC.jpeg" alt="logo Université Paris Cité">
-    <img style="width:20%; margin:10px" src="images/logo-inrae.jpg" alt="logo INRAE">
+    <img style="width:20%; margin:10px" src="images/Logo-inrae.jpg" alt="logo INRAE">
     <img style="width:20%; margin:10px" src="images/logo-inria.jpg" alt="logo INRIA">
   </div>
 </div>
