Upload internship offers

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> HOME</a>
     <a href="#overview" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-space-shuttle"></i> OVERVIEW</a>
     <a href="#news" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-newspaper"></i> NEWS</a>
+    <a href="#positions" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-briefcase"></i> JOB OFFERS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
     <!--<a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
@@ -78,6 +79,7 @@ body, html {
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#overview" class="w3-bar-item w3-button" onclick="toggleFunction()">OVERVIEW</a>
     <a href="#news" class="w3-bar-item w3-button" onclick="toggleFunction()">NEWS</a>
+    <a href="#positions" class="w3-bar-item w3-button" onclick="toggleFunction()">JOB OFFERS</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
     <!--<a href="#" class="w3-bar-item w3-button">SEARCH</a>-->
   </div>
@@ -113,6 +115,38 @@ body, html {
   <ul class="w3-ul w3-border" style="width:100%">
   <li>24/11/2023: We are offering three MSc internships.</li>
 </ul>
+</div>
+
+
+<div class="bgimg-3 w3-display-container">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide">JOB OFFERS</span>
+  </div>
+</div>
+
+<div class="w3-content w3-container w3-padding-64" id="positions">
+  <h3 class="w3-center">JOB OFFERS</h3>
+  <p class="w3-left-align">We have the following MSc internship positions opened (click on the image to see each description and how to apply):</p>
+  <ul class="w3-ul w3-card-4">
+    <li class="w3-bar">
+      <a href="stage_M2_GeoReSeT_2023_1.pdf"><img src="images/stage_M2_GeoReSeT_2023_1.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
+      <div class="w3-bar-item">
+        <span class="w3-large">Joint encoding of multi-spectral images</span><br>
+      </div>
+    </li>
+    <li class="w3-bar">
+      <a href="stage_M2_GeoReSeT_2023_2.pdf"><img src="images/stage_M2_GeoReSeT_2023_2.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
+      <div class="w3-bar-item">
+        <span class="w3-large">Partial latent encoding of multi-spectral data</span><br>
+      </div>
+    </li>
+    <li class="w3-bar">
+      <a href="stage_M2_GeoReSeT_2023_3.pdf"><img src="images/stage_M2_GeoReSeT_2023_3.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
+      <div class="w3-bar-item">
+        <span class="w3-large">Geo-coding of textual input</span><br>
+      </div>
+    </li>
+  </ul>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
