--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="news">
   <h3 class="w3-center">News</h3>
   <ul class="w3-ul w3-border" style="width:100%">
+  <li>02/02/2024: Sylvain Lobry presented the project at the ANR TSIA KO meeting.</li>
   <li>24/11/2023: We are offering three MSc internships.</li>
 </ul>
 </div>
