--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="news">
   <h3 class="w3-center">News</h3>
   <ul class="w3-ul w3-border" style="width:100%">
+  <li>01/03/2024: Nicolas Houdré started his internship.</li>
   <li>02/02/2024: Sylvain Lobry presented the project at the ANR TSIA KO meeting.</li>
   <li>24/11/2023: We are offering three MSc internships.</li>
 </ul>
@@ -127,27 +128,7 @@ body, html {
 
 <div class="w3-content w3-container w3-padding-64" id="positions">
   <h3 class="w3-center">JOB OFFERS</h3>
-  <p class="w3-left-align">We have the following MSc internship positions opened (click on the image to see each description and how to apply):</p>
-  <ul class="w3-ul w3-card-4">
-    <li class="w3-bar">
-      <a href="stage_M2_GeoReSeT_2023_1.pdf"><img src="images/stage_M2_GeoReSeT_2023_1.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
-      <div class="w3-bar-item">
-        <span class="w3-large">Joint encoding of multi-spectral images</span><br>
-      </div>
-    </li>
-    <li class="w3-bar">
-      <a href="stage_M2_GeoReSeT_2023_2.pdf"><img src="images/stage_M2_GeoReSeT_2023_2.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
-      <div class="w3-bar-item">
-        <span class="w3-large">Partial latent encoding of multi-spectral data</span><br>
-      </div>
-    </li>
-    <li class="w3-bar">
-      <a href="stage_M2_GeoReSeT_2023_3.pdf"><img src="images/stage_M2_GeoReSeT_2023_3.jpg" class="w3-bar-item w3-hide-small" style="width:105px"></a>
-      <div class="w3-bar-item">
-        <span class="w3-large">Geo-coding of textual input</span><br>
-      </div>
-    </li>
-  </ul>
+  <p class="w3-left-align">We do not have offers at the moment.</p>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
