Add PhD offer INRIA

--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="news">
   <h3 class="w3-center">News</h3>
   <ul class="w3-ul w3-border" style="width:100%">
+  <li>28/05/2024 <a href="https://recrutement.inria.fr/public/classic/en/offres/2024-07756">PhD position with INRIA</a></li>
   <li>01/03/2024: Nicolas Houdré started his internship.</li>
   <li>02/02/2024: Sylvain Lobry presented the project at the ANR TSIA KO meeting.</li>
-  <li>24/11/2023: We are offering three MSc internships.</li>
+  <li>24/11/2023: We are offering three MSc internships (filled).</li>
 </ul>
 </div>
 
@@ -128,7 +129,9 @@ body, html {
 
 <div class="w3-content w3-container w3-padding-64" id="positions">
   <h3 class="w3-center">JOB OFFERS</h3>
-  <p class="w3-left-align">We do not have offers at the moment.</p>
+  <ul class="w3-ul w3-border" style="width:100%">
+	  <li>28/05/2024 <a href="https://recrutement.inria.fr/public/classic/en/offres/2024-07756">PhD position with INRIA</a></li>
+	</ul>
 </div>
 
 <!-- Third Parallax Image with Portfolio Text -->
