Update news and geocv

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> HOME</a>
     <a href="#overview" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-space-shuttle"></i> OVERVIEW</a>
     <a href="#news" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-newspaper"></i> NEWS</a>
+    <a href="#pubs" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> PUBLICATIONS</a>
     <a href="#positions" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-briefcase"></i> JOB OFFERS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
     <!--<a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
@@ -79,6 +80,7 @@ body, html {
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#overview" class="w3-bar-item w3-button" onclick="toggleFunction()">OVERVIEW</a>
     <a href="#news" class="w3-bar-item w3-button" onclick="toggleFunction()">NEWS</a>
+    <a href="#pubs" class="w3-bar-item w3-button" onclick="toggleFunction()">PUBLICATIONS</a>
     <a href="#positions" class="w3-bar-item w3-button" onclick="toggleFunction()">JOB OFFERS</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
     <!--<a href="#" class="w3-bar-item w3-button">SEARCH</a>-->
@@ -113,13 +115,37 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="news">
   <h3 class="w3-center">News</h3>
   <ul class="w3-ul w3-border" style="width:100%">
-  <li>28/05/2024 <a href="https://recrutement.inria.fr/public/classic/en/offres/2024-07756">PhD position with INRIA</a></li>
+  <li>08/01/2025: New publication at the GEOCV workshop at WACV!</li>
+  <li>01/11/2024: Nicolas Houdré and Hugo Riffaud de Turckheim started their PhD</li>
+  <li>30/09/2024: Nicolas Houdré successfully defended his internship</li>
+  <li>28/05/2024: <s>PhD position with INRIA</s></li>
   <li>01/03/2024: Nicolas Houdré started his internship.</li>
   <li>02/02/2024: Sylvain Lobry presented the project at the ANR TSIA KO meeting.</li>
   <li>24/11/2023: We are offering three MSc internships (filled).</li>
 </ul>
 </div>
 
+
+<div class="bgimg-3 w3-display-container">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide">PUBLICATIONS</span>
+  </div>
+</div>
+
+<div class="w3-content w3-container w3-padding-64" id="pubs">
+  <h3 class="w3-center">PUBLICATIONS</h3>
+  <ul class="w3-ul w3-card-4">
+    <li class="w3-bar">
+      <img src="images/GEOCV25.jpg" class="w3-bar-item w3-hide-small" style="width:105px">
+      <div class="w3-bar-item">
+        <span class="w3-large">ProMM-RS: Exploring Probabilistic learning for Multi-Modal <br>Remote Sensing Image Representations,</span><br>
+        <span>Nicolas Houdré, Diego Marcos, Dino Ienco, Laurent Wendling, Camille Kurtz, Sylvain Lobry,</span><br>
+        <span>GEOCV Workshop @ WACV 25.</span><br>
+    <span><a href="GEOCV25.pdf">pre-print</a></span>
+      </div>
+    </li>
+  </ul>
+</div>
 
 <div class="bgimg-3 w3-display-container">
   <div class="w3-display-middle">
@@ -130,7 +156,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="positions">
   <h3 class="w3-center">JOB OFFERS</h3>
   <ul class="w3-ul w3-border" style="width:100%">
-	  <li>28/05/2024 <a href="https://recrutement.inria.fr/public/classic/en/offres/2024-07756">PhD position with INRIA</a></li>
+	  <li>28/05/2024 <s>PhD position with INRIA</s> (filled)</li>
 	</ul>
 </div>
 
@@ -144,11 +170,13 @@ body, html {
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">PEOPLE</h3>
-  <p class="w3-center">PI: <a href="https://www.sylvainlobry.com">Sylvain Lobry (UPC)</a>
+  <p class="w3-center">PI: <a href="https://www.sylvainlobry.com">Sylvain Lobry (UPCité)</a>
     <br>
     INRIA PI: Diego Marcos (INRIA)
     <br>
-    <a href="http://camille-kurtz.com">Camille Kurtz (UPC)</a>,  <a href="https://helios2.mi.parisdescartes.fr/~lwendlin/">Laurent Wendling (UPC)</a>, <a href="https://sites.google.com/site/dinoienco/">Dino Ienco (INRAE)</a>
+    <a href="http://camille-kurtz.com">Camille Kurtz (UPCité)</a>,  <a href="https://helios2.mi.parisdescartes.fr/~lwendlin/">Laurent Wendling (UPCité)</a>, <a href="https://sites.google.com/site/dinoienco/">Dino Ienco (INRAE)</a>
+    <br>
+    Nicolas Houdré (UPCité), Hugo Riffaud de Turckheim (INRIA)
   <p class="w3-center"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>Email (for Sylvain Lobry only): firstname.lastname at u-paris.fr<br></p>
   <p class="w3-center">This work is funded by <a href="https://www.anr.fr">ANR</a></p>
   <div class="w3-center">
